# mcp-server-find

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  README.md  SPEC.md  mcp.json  pyproject.toml  server.json
.github/workflows/: pypi-publish.yml
src/mcp_server_find/: __init__.py  __main__.py  categories.py  db.py  enrich.py  install.py  search.py  server.py  snapshot.py  sync.py  types.py
src/mcpfinder/: __init__.py  __main__.py  categories.py  db.py  enrich.py  install.py  search.py  server.py  snapshot.py  sync.py
tests/: conftest.py  test_install.py  test_search.py
