[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-find"
version = "0.1.1"
description = "MCP server discovery - find and install MCP servers from Official Registry, Glama, and Smithery"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Dario Clavijo", email = "clavijodario@gmail.com"}
]
dependencies = []

[project.optional-dependencies]
mcp = ["fastmcp>=2.0"]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "hatch",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "httpx",
]
lint = [
    "ruff",
    "mypy",
]
all = ["mcp-server-find[dev,test,lint,mcp]"]

[project.scripts]
mcp-server-find = "mcp_server_find.__main__:main"

[project.urls]
Homepage = "https://github.com/daedalus/mcp-server-find"
Repository = "https://github.com/daedalus/mcp-server-find"
Issues = "https://github.com/daedalus/mcp-server-find/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_find"]

[tool.hatch.build.targets.sdist]
include = ["src/mcp_server_find"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "TCH", "N", "C4", "ARG"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ANN", "ARG"]
"enrich.py" = ["ARG"]
"snapshot.py" = ["ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-fail-under=60"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "tests/*",
    "*/__init__.py",
    "*/server.py",
    "*/sync.py",
    "*/enrich.py",
    "*/snapshot.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]